k8s-kustomize/Overlay/prod/prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress

spec:
  ingressClassName: nginx
  rules:
  - host: todoapp.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: react-svc
            port: 
              number: 80
      - path: "/api"
        pathType: Prefix
        backend:
          service:
            name: flask-svc
            port: 
              number: 5000
